# hello_world

./: .em_skill.json  .gitignore  .mcp.json  CLAUDE.md  CMakeLists.txt  README.md  _read_db.py  freertos-api-reference.md  partitions.csv  plan.md  sdkconfig
.claude/: settings.json
.claude/skills/: .em_skill_meta.json
.codegraph/: daemon.pid
.emv2/: decision-log.md  memory-log.md  problem-log.md  project-spec.md
.ux/: last-discovery.json  last-recommendation.json
components/app/: CMakeLists.txt  app.c  app.h  menu.c  menu.h  sys_ctrl.c  sys_ctrl.h
components/bsp/: CMakeLists.txt  bsp.c  bsp.h
components/bsp/audio/: CMakeLists.txt  audio.c  audio.h
components/bsp/camera/: camera_test.c  camera_test.h
components/bsp/debug/: debug.h
components/bsp/iic/: iic.c  iic.h
components/bsp/key/: key.c  key.h
components/bsp/led/: led.c  led.h
components/bsp/oled/: oled.c  oled.h  oled_display.c  oled_display.h  oled_image.h  oledfont.h
components/bsp/rgb/: led_strip_encoder.c  led_strip_encoder.h  rgb.c  rgb.h
components/bsp/sd/: sd.c  sd.h
components/bsp/sensor/: dht11.c  dht11.h  ds18b20.c  ds18b20.h  sensor_init.c  sensor_init.h
components/bsp/touch_lcd/: lcd_test.c  lcd_test.h  lv_port_disp.c  lv_port_disp.h  lv_port_indev.c  lv_port_indev.h  lvgl_app.c  lvgl_app.h  touch_lcd_init.c  touch_lcd_init.h
components/network/: CMakeLists.txt  http_dl.c  http_dl.h  mqtt.c  (+7 more)
docs/: bun-install-attempts.md  cmake-config.md  dht11协议.md  ds18b20协议.md  freertos_mutex.md  linux_commands.md  rmt.md  ws2812协议.md  摄像头配置与测试说明.md
main/: CMakeLists.txt  hello_world_main.c  main.c  menu.c  menu.h  mqtt.c  mqtt.h  queue_demo.c  storage_init.c  storage_init.h  sys_ctrl.c  sys_ctrl.h  sys_info.c  sys_info.h  wifi.c  wifi.h
spiffs_image/: wifi_ap.json
(+175 files in other folders)
